fix gui stuff and immutable list supplying